update swagger description
