# controllers/userController.js
@@ -11,7 +11,36 @@ const PASSWORD_REGEX = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$/;
 const LOGIN_REGEX = /^[a-zA-Z0-9\-\s]+$/;
 
 
-const getUser = async (req, res) => {
+const getUser = async(req, res) => {
+
+    /*  
+    #swagger.tags = ['Utilisateur']
+    #swagger.description = "Rechercher un utilisateur dans la base de données afin de le connecter et de lui attribuer un jeton d\'autorisation" 
+    
+    #swagger.parameters['obj'] = {
+        in: 'body',
+        required: true,
+        description: 'données de l\'utilisateur',
+        type: 'string'
+        schema: {
+            email: "l\'email de l\'utilisateur",
+            password: "le mot de passe de l\'utilisateur"
+        }
+    }
+
+    #swagger.responses[200] = { 
+            content : "application/json",
+            schema:  {$ref: "#/definitions/userResponse"},
+            description: 'Utilisateur trouvé dans la base de données.' 
+           }            
+
+    #swagger.responses[400] = {description: 'Email introuvable, l\'utilisateur n\'existe pas dans la base de données.'}
+    #swagger.responses[400] = {description: 'L\'utilisateur trouvé mais mot de passe incorrect'}
+    #swagger.responses[400] = {description: 'L\'email n\'a pas été renseigné'}
+    #swagger.responses[400] = {description: 'Le format de l\'email est invalide'}
+    #swagger.responses[500] = {description: 'une erreur serveur est survenue.'} 
+    
+    */
     let email = req.body.email;
     let password = req.body.password;
 
@@ -22,7 +51,7 @@ const getUser = async (req, res) => {
             if (!user) {
                 return res.status(400).json({ 'error': 'Email introuvable' });
             } else {
-                bcrypt.compare(password, user.password, function (err, boolCrypt) {
+                bcrypt.compare(password, user.password, function(err, boolCrypt) {
                     if (boolCrypt) {
                         res.status(200).send({ "user": user, "token": generateToken(user.id) });
                     } else if (!boolCrypt) {
@@ -41,11 +70,13 @@ const getUser = async (req, res) => {
 };
 
 
-const createUser = async (req, res) => {
+const createUser = async(req, res) => {
+
+    /*#swagger.ignore = true*/
 
     const userId = verifyToken(req, res);
     if (userId == null) return res;
-    if(adminCheck(userId) == false) return res;
+    if (adminCheck(userId) == false) return res;
 
     let login = req.body.login;
     let email = req.body.email;
@@ -59,8 +90,8 @@ const createUser = async (req, res) => {
         if (user) {
             return res.status(400).json({ 'error': 'l\'email est déjà utilisé' });
         } else {
-            bcrypt.genSalt(10, function (err, salt) {
-                bcrypt.hash(password, salt, function (err, hashedPass) {
+            bcrypt.genSalt(10, function(err, salt) {
+                bcrypt.hash(password, salt, function(err, hashedPass) {
                     const newUserRecord = new User({
                         login: login,
                         email: email,
@@ -83,11 +114,43 @@ const createUser = async (req, res) => {
     })
 };
 
-const updateUser = async (req, res) => {
+const updateUser = async(req, res) => {
+
+    /*  
+    #swagger.tags = ['Utilisateur']
+    #swagger.description = "modifier les informations d'un utilisateur" 
+
+    #swagger.security = [{ "jwt" : [] }]
     
+    #swagger.parameters['obj'] = {
+        in: 'body',
+        required: true,
+        description: 'données de l\'utilisateur',
+        schema: {
+            id: "l'identifiant de l'utilisateur à modifier",
+            login: "le nom de l'utilisateur",
+            email: "l'email de l'utilisateur"
+            password: "le mot de passe de l'utilisateur",
+            organisation: "l'organisme auquel l'utilisateur est rattaché"
+        }
+    }
+
+    #swagger.responses[201] = { 
+            content : "application/json",
+            schema:  {$ref: "#/definitions/user"},
+            description: 'Utilisateur modifié dans la base de données avec succès.' 
+           }            
+
+    #swagger.responses[403] = {description: 'Token invalide.'}
+    #swagger.responses[403] = {description: 'L\'utilisateur ne dispose pas des droits suffisants'}
+    #swagger.responses[404] = {description: 'L\'utilisateur n\'a pas été trouvé dans la base de données'}
+    #swagger.responses[500] = {description: 'une erreur serveur est survenue.'} 
+    
+    */
+
     const userId = verifyToken(req, res);
     if (userId == null) return res;
-    if(adminCheck(userId) == false) return res;
+    if (adminCheck(userId) == false) return res;
 
     let id = req.body.id;
     let login = req.body.login;
@@ -114,7 +177,7 @@ const updateUser = async (req, res) => {
                 password: hashedPass,
                 organisation: organisation
             }
-        }, { new: true }, function (err, result) {
+        }, { new: true }, function(err, result) {
             if (err) {
                 return res.status(400).json({ 'error': 'Echec de la mise a jour de l\'utilisateur' })
             } else { // logs are saved only when the action is validated with no error
@@ -127,13 +190,13 @@ const updateUser = async (req, res) => {
 }
 
 
-const deleteUser = async (req, res) => {
+const deleteUser = async(req, res) => {
 
     const userId = verifyToken(req, res);
     if (userId == null) return res;
-    if(adminCheck(userId) == false) return res;
+    if (adminCheck(userId) == false) return res;
     id = req.body.id;
-    if(!ObjectId.isValid(id)) return res.status(400).json({'error':'L\'ID spécifié n\'existe  pas'});
+    if (!ObjectId.isValid(id)) return res.status(400).json({ 'error': 'L\'ID spécifié n\'existe  pas' });
     User.findByIdAndDelete(
         req.body.id,
         (err, result) => {
@@ -144,7 +207,7 @@ const deleteUser = async (req, res) => {
                 return res.status(500).json({ 'error': 'erreur serveur lors de la suppression de l\'utilisateur : ' + err });
             }
         }
-    )   
+    )
 }
 
 
@@ -196,14 +259,14 @@ function saveLog(actorId, targetId, action) {
 
 // checks is user retrieved from token has admin rights
 function adminCheck(userId) {
-    User.findById(userId, function (err, result) {
-        if(err) {
-            res.status(404).json({'error':'Utilisateur introuvable'});
+    User.findById(userId, function(err, result) {
+        if (err) {
+            res.status(404).json({ 'error': 'Utilisateur introuvable' });
         } else {
             if (result.isAdmin) {
                 return true;
             } else {
-                res.status(403).json({'error':'Vous ne disposez pas des droits'});
+                res.status(403).json({ 'error': 'Vous ne disposez pas des droits' });
             }
         }
     })
@@ -213,13 +276,13 @@ function adminCheck(userId) {
 // fonction de vérification de la validité du token, renvoie null si erreur
 function verifyToken(req, res) {
     try {
-        jwt.verify(req.headers['authorization'], process.env.TOKEN_SECRET, function (tokenErr, decoded) {
+        jwt.verify(req.headers['authorization'], process.env.TOKEN_SECRET, function(tokenErr, decoded) {
             if (tokenErr) throw new Error(tokenErr);
             req.auth = decoded;
         })
     } catch (e) {
-       res.status(403).json({'error':'Token invalide '+e});
-       return null;
+        res.status(403).json({ 'error': 'Token invalide ' + e });
+        return null;
     }
     return req.auth.sub;
 }
